--- a/packages/docs/src/pages/tokens/line-height.stories.mdx
+++ b/packages/docs/src/pages/tokens/line-height.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta } from "@storybook/addon-docs";
-import { lineHeights } from "@ignite-ui/tokens";
+import { lineHeights } from "@luiz504-ignite-ui/tokens";
 
 import { TokensGrid } from "../../components/TokensGrid";
 
