feat: new component Tooltip

--- a/packages/docs/src/pages/tokens/fonts.stories.mdx
+++ b/packages/docs/src/pages/tokens/fonts.stories.mdx
@@ -1,4 +1,5 @@
 import { Meta } from "@storybook/addon-docs";
+
 import { fonts } from "@luiz504-ignite-ui/tokens";
 
 import { TokensGrid } from "../../components/TokensGrid";
@@ -6,5 +7,7 @@ import { TokensGrid } from "../../components/TokensGrid";
 <Meta title={"Tokens/Font Families"} />
 
 # Font Families
+
+Please ensure that the fonts are installed prior to usage.
 
 <TokensGrid tokens={fonts} />
